--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Demo</title>
 </head>
 <body>
-    <h1>This is my first git and github file for day 2</h1>
+    <h1>This is my first git and github </h1>
 </body>
 </html>
